--- a/.github/workflows/deploy_gce.yml
+++ b/.github/workflows/deploy_gce.yml
@@ -40,7 +40,7 @@ jobs:
       - id: "auth"
         uses: "google-github-actions/auth@v0"
         with:
-          credentials_json: "${{ secrets.gcp_credentials }}"
+          credentials_json: "${{ secrets.GCE_SA_KEY }}"
 
       - id: "compute-ssh"
         uses: "google-github-actions/ssh-compute@v0"
