--- a/.github/workflows/deploy_gce.yml
+++ b/.github/workflows/deploy_gce.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           instance_name: ${{ env.GCE_INSTANCE }}
           zone: ${{ env.GCE_INSTANCE_ZONE }}
-          ssh_private_key: "${{ secrets.GCP_SSH_PRIVATE_KEY }}"
+          ssh_private_key: "${{ secrets.SSH_KEY }}"
           command: |
             echo "Hello World!"
             git pull https://github.com/dscnsec/task-board
